--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stack Overflow - Where Developers Learn, Share, &amp; Build Careers</title>
-    <link rel="stylesheet" href="stylesOVERFLOW.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="Social-impact.css">
-    <link rel="stylesheet" href="Help-improve.css">
-    <link ref="stylesheet" href="END.CSS">
-    <link ref="stylesheet" href="Login.css">
 
 </head>
 <body>
