--- a/create-a-team.html
+++ b/create-a-team.html
@@ -103,8 +103,19 @@
                             <p style="margin-top: 20px;">Passwork</p>
                             <input type="text" name="input" style="border-radius: 5px;">
                             <p style="margin-top: 20px;">Passwords must contain at least eight characters, including at least 1 letter and 1 number.</p>
-                            <img src="BTLimg/CheckRobot.png" style="margin-top: 20px;">
+                            
 
+                            <div style="width: 250px; height:160px; background-color: #F1F2F3; border-radius: 5px;">
+                                <div style="width: 150px; height:130px; background-color: #F9F9F9; border:1px solid rgb(192, 189, 189); position:relative; top: 10px; left: 50px; padding-top: 10px; padding-left: 10px;">
+                                    <form>
+                                        <label for="Checkboxrobot">
+                                            <input type="checkbox" name="robotcheckbox" style="width: 25px; height: 25px;" value="I'm not robot">
+                                            I'm not robot
+                                        </label>
+                                    </form>
+                                    <img src="BTLimg/CheckRobot.png" style="margin-top: 10px; margin-left: 15px;">
+                                </div>
+                            </div>
                             <p style="margin-top: 20px; margin-left: 40px;">Opt-in to receive occasional product updates, user research invitations, company announcements, and digests.</p>
                             
                             <div style="width: 250px; height: 40px; background-color: blue; border-radius: 5px; margin-left: 40px; margin-top: 30px;">
